--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "slugify": "^1.6.6",
+    "unique-filename": "^3.0.0",
     "ytdl-core": "^4.11.5"
   }
 }
